--- a/WebApiSample/WebApiSample/Views/Shared/_Layout.cshtml
+++ b/WebApiSample/WebApiSample/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p><a href="https://github.com/kiewic/AspNet-WebApi-Sample">Source Code on GitHub</a></p>
+            <p><a href="https://github.com/phunghong1208/WebApi-Sample.git">Source Code on GitHub</a></p>
         </footer>
     </div>
 
